--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,9 +7,11 @@
     tools:context=".Fragment.FragmentAdd"
     android:layout_gravity="center"
     android:background="@color/white"
+    android:orientation="vertical"
     >
 
     <ScrollView
+        android:layout_weight="1"
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -88,7 +90,7 @@
                     android:textColor="@color/white" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/btnDateStart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -116,7 +118,7 @@
                     android:textSize="16sp" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/btnTimeEnds"
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,7 +128,7 @@
                     android:textColor="@color/white" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/btnDateEnds"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -135,32 +137,6 @@
                     android:text="Date"
                     android:textColor="@color/white" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView3"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/baseline_add_24"
-                    app:tint="@color/dark_blue" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="Subheading"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -184,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
-                    android:text="Trarvel Time"
+                    android:text="Set notification"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
@@ -220,13 +196,26 @@
                         android:textSize="18sp" />
 
                     <Switch
-                        android:id="@+id/switch3"
+                        android:id="@+id/switchNote"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                 </LinearLayout>
+
+                <EditText
+                    android:inputType="textMultiLine"
+                    android:visibility="gone"
+                    android:padding="10dp"
+                    android:background="@drawable/background_note"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/editNote"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"/>
+
             </LinearLayout>
+
 
 
         </LinearLayout>
@@ -234,15 +223,13 @@
     </ScrollView>
 
     <Button
+        android:layout_marginTop="30dp"
         android:id="@+id/button5"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_gravity="center"
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_design"
         android:text="Save"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/white" />
+</LinearLayout>
