--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="dark_blue">#1996D0</color>
     <color name="dark_blue2">#0068B3</color>
     <color name="startColor">#80ACE6FF</color>
+    <color name="grey">#D9D9D9</color>
 </resources>
