--- a/app/src/main/res/layout/plan_card.xml
+++ b/app/src/main/res/layout/plan_card.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginStart="50dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginEnd="50dp"
     android:background="@drawable/background_card"
     android:elevation="3dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal">
 
     <LinearLayout
         android:background="@drawable/background_top_of_card"
@@ -30,11 +33,23 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
-            android:id="@+id/textView3"
+            android:id="@+id/txtPlan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Plan" />
+
+        <ImageView
+            android:visibility="visible"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/imgDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            app:tint="@color/dark_blue2"
+            app:srcCompat="@drawable/baseline_close_24" />
 
     </LinearLayout>
 
@@ -42,6 +57,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="25dp">
+
+        <ImageView
+            android:id="@+id/imgNoti"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="0"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/txtTimeStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/txtTimeStart"
+            app:srcCompat="@drawable/baseline_notifications_24" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -66,7 +93,7 @@
 
         <TextView
             android:textColor="@color/black"
-            android:id="@+id/textView5"
+            android:id="@+id/txtTimeStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -77,7 +104,7 @@
 
         <TextView
             android:textColor="@color/black"
-            android:id="@+id/textView11"
+            android:id="@+id/txtTimeEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -86,4 +113,27 @@
             app:layout_constraintStart_toEndOf="@+id/imageView8"
             app:layout_constraintTop_toTopOf="@+id/imageView8" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/txtNote"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginStart="20dp"
+        android:text="Note"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/txtNoteDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/background_text"
+        android:padding="10dp"
+        android:text="TextView" />
 </LinearLayout>
